Add responsive two-column layout with image and text sections
- Created a new HTML file for a responsive layout
- Implemented a grid system with two columns for text and images
- Added hover effects for images and buttons
- Included media queries for mobile responsiveness

--- a/tamplete/index.html
+++ b/tamplete/index.html
@@ -43,6 +43,33 @@
 
      </section>
 
+    <div class="grid-container">
+
+        <div class="card">
+            <div class="image-class">
+                <!-- <i class="fa-regular fa-house icon"></i> -->
+                <img src="1.jpg" style="width: 100% ;height: 100%;" alt="placeholder image">
+            </div>
+            <h2>Lorem, Ipsum.</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis tempore fugit quo blanditiis sunt neque perspiciatis consequatur. Iure, recusandae facilis!</p>
+            <a class="card-link" href="#">Read more</a>
+        </div>
+
+        <div class="card">
+            <div class="image-class">
+                <!-- <i class="fa-regular fa-house icon"></i> -->
+                <img src="2.jpg" style="width: 100% ;height: 100%;" alt="placeholder image">
+            </div>
+            <h2>Lorem, Ipsum.</h2>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nobis tempore fugit quo blanditiis sunt neque perspiciatis consequatur. Iure, recusandae facilis!</p>
+            <a class="card-link" href="#">Read more</a>
+            
+        </div>
+      </div>
+        
+
+
+
      <script>
      // Select elements
      const hamburger = document.querySelector('.hamburger');
